api-python/k8s/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: limite-conexoes-simultaneas
  namespace: default
spec:
  inFlightReq:
    amount: 100
