api-python/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-python-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-python
  template:
    metadata:
      labels:
        app: api-python
    spec:
      containers:
      - name: api-python
        image: api-python:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
