api-python/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-python-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-limite-conexoes-simultaneas@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-python-service
            port:
              number: 80
